# Artificial_life

./: .gitignore  AreaMap.cpp  AreaMap.hpp  CMakeLists.txt  Makefile  README.md  SimulationParameters.hpp  configure.txt  helper.cpp  helper.hpp  main.cc  main.cpp
Graphics/: MainWindow.cc  MainWindow.cpp  MainWindow.h  MainWindow.hpp  RendererConstants.hpp
Subjects/: Animal.cc  Animal.cpp  Animal.hpp  AnimalConstants.hpp  Herbivore.cc  Herbivore.cpp  Herbivore.h  Herbivore.hpp  Plant.cc  Plant.h  Plant.hpp  Predator.cc  Predator.cpp  Predator.hpp  Subject.cc  Subject.h  Subject.hpp  SubjectsCollection.cpp  SubjectsCollection.hpp  SubjectsFactory.hpp  SuperPlant.hpp  TypicalPlant.hpp
Subjects/Animals/: Animal.cpp  Animal.hpp  AnimalConstants.hpp  Herbivore.cpp  Herbivore.hpp  Predator.cpp  Predator.hpp
Subjects/Plants/: Plant.cpp  Plant.hpp  SuperPlant.hpp  TypicalPlant.hpp
Unit_tests/: MasterTestSuite.cpp  collectionTests.cpp  factoryTests.cpp  subjectsTests.cpp
